Update notebook and scripts: clean imports, fix ingestion logic, add LangGraph pipeline

--- a/RAG-PROJECT.ipynb
+++ b/RAG-PROJECT.ipynb
@@ -359,29 +359,10 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import argparse\n",
-    "import json\n",
-    "from datetime import datetime\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
     "from langchain_community.document_loaders import Docx2txtLoader, PyPDFLoader, UnstructuredPowerPointLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_core.documents import Document\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
-    "from langchain_chroma import Chroma\n",
-    "from langchain_community.vectorstores import FAISS\n",
-    "from langchain_pinecone import PineconeVectorStore\n",
-    "from pinecone import Pinecone\n",
-    "\n",
-    "# if you have more imports (Chat models, prompts, Flask, etc.) paste them here too\n",
-    "\n",
-    "BASE_DIR = os.getcwd()\n",
-    "DATA_DIR = os.path.join(BASE_DIR, \"data\")\n",
-    "VECTOR_DIR = os.path.join(BASE_DIR, \"vector\")\n",
-    "\n",
-    "load_dotenv(os.path.join(BASE_DIR, \".env\"))\n"
+    "# Removed unused imports as per clean-up\n"
    ]
   },
   {
@@ -404,7 +385,7 @@
     "- `MISTRAL_MODEL`: model name for Mistral (e.g. `mistral-large-latest`).\n",
     "- `OLLAMA_MODEL`: model name for Ollama (e.g. `llama3`).\n",
     "\n",
-    "The idea: the rest of the code just calls `get_chat_model()` and doesn’t care which provider is behind it.\n"
+    "The idea: the rest of the code just calls `get_chat_model()` and doesn\u2019t care which provider is behind it.\n"
    ]
   },
   {
@@ -707,10 +688,10 @@
     "These helper functions standardize how I read and preprocess documents.\n",
     "\n",
     "- `_file_type(path)`: looks at the file extension and returns a simple type label:\n",
-    "  - `.docx` → `\"docx\"`\n",
-    "  - `.pdf` → `\"pdf\"`\n",
-    "  - `.pptx` → `\"pptx\"`\n",
-    "  - anything else → `\"other\"` (ignored)\n",
+    "  - `.docx` \u2192 `\"docx\"`\n",
+    "  - `.pdf` \u2192 `\"pdf\"`\n",
+    "  - `.pptx` \u2192 `\"pptx\"`\n",
+    "  - anything else \u2192 `\"other\"` (ignored)\n",
     "\n",
     "- `_load_text(abs_path, ftype)`: given an absolute path and a file type:\n",
     "  - For `docx`, uses `Docx2txtLoader` to extract text.\n",
@@ -736,7 +717,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✔ File helper functions LOADED.\n"
+      "\u2714 File helper functions LOADED.\n"
      ]
     }
    ],
@@ -758,7 +739,7 @@
     "        return docs[0].page_content\n",
     "    if ftype == \"pdf\":\n",
     "        docs = PyPDFLoader(abs_path).load()\n",
-    "        return docs[0].page_content\n",
+    "        return \"\\n\\n\".join(d.page_content for d in docs)\n",
     "    if ftype == \"pptx\":\n",
     "        slides = UnstructuredPowerPointLoader(abs_path).load()\n",
     "        return \"\\n\\n\".join(d.page_content or \"\" for d in slides)\n",
@@ -773,7 +754,8 @@
     "    )\n",
     "    return splitter.split_documents([Document(page_content=text)])\n",
     "\n",
-    "print(\"✔ File helper functions LOADED.\")\n"
+    "print(\"\u2714 File helper functions LOADED.\")\n",
+    "\n"
    ]
   },
   {
@@ -788,7 +770,7 @@
     "\n",
     "Main steps:\n",
     "1. Ensure `DATA_DIR` exists.\n",
-    "2. Create an embedding model (`OpenAIEmbeddings` with `EMBED_MODEL`).\n",
+    "2. Create an embedding model with `get_embeddings()` (Ollama local embeddings by default; OpenAI embeddings only if configured).\n",
     "3. Read `VECTOR_DB` to decide backend (`chroma`, `faiss`, or `pinecone`).\n",
     "4. Walk through all files in `data/`.\n",
     "   - Skip temporary files (like `~$...` from MS Office).\n",
@@ -832,6 +814,8 @@
     "    # LOAD FILES FROM /data\n",
     "    # -------------------------\n",
     "    for root, _, files in os.walk(DATA_DIR):\n",
+    "        if \".ipynb_checkpoints\" in root:\n",
+    "            continue\n",
     "        for name in files:\n",
     "            if name.startswith(\"~$\"):\n",
     "                continue\n",
@@ -922,7 +906,8 @@
     "    print(\"======================================\")\n",
     "    print(\"             INGEST END\")\n",
     "    print(\"======================================\")\n",
-    "    return {\"backend\": backend, \"count\": len(all_docs)}\n"
+    "    return {\"backend\": backend, \"count\": len(all_docs)}\n",
+    "\n"
    ]
   },
   {
@@ -1022,7 +1007,7 @@
     "  4. Concatenates them into a `context` string.\n",
     "  5. Sends question + context to the LLM.\n",
     "  6. Returns:\n",
-    "     - `answer`: the model’s answer.\n",
+    "     - `answer`: the model\u2019s answer.\n",
     "     - `context`: the actual context used.\n",
     "     - `docs`: basic metadata (path, filename) of retrieved documents.\n",
     "\n",
@@ -1159,6 +1144,74 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# \ud83d\udd35 LangGraph RAG Pipeline (NEW)\n",
+    "\n",
+    "This section demonstrates a structured RAG pipeline using **LangGraph**.\n",
+    "Instead of a simple linear chain, we define a graph with state:\n",
+    "1. **Retrieve**: Fetches docs based on question.\n",
+    "2. **Generate**: Synthesizes answer using context.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypedDict, List\n",
+    "from langgraph.graph import StateGraph, END\n",
+    "\n",
+    "# 1. Define State\n",
+    "class RagState(TypedDict):\n",
+    "    question: str\n",
+    "    context: str\n",
+    "    answer: str\n",
+    "    docs: List[Document]\n",
+    "\n",
+    "# 2. Define Nodes\n",
+    "def retrieve(state: RagState):\n",
+    "    print(\"---RETRIEVE---\")\n",
+    "    question = state[\"question\"]\n",
+    "    retriever = get_retriever()\n",
+    "    docs = retriever.invoke(question)\n",
+    "    return {\"docs\": docs, \"context\": _concat(docs)}\n",
+    "\n",
+    "def generate(state: RagState):\n",
+    "    print(\"---GENERATE---\")\n",
+    "    question = state[\"question\"]\n",
+    "    context = state[\"context\"]\n",
+    "    llm = get_chat_model()\n",
+    "    \n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", \"Answer based on context: {context}\"),\n",
+    "        (\"human\", \"{question}\")\n",
+    "    ])\n",
+    "    chain = prompt | llm\n",
+    "    response = chain.invoke({\"context\": context, \"question\": question})\n",
+    "    return {\"answer\": response.content}\n",
+    "\n",
+    "# 3. Build Graph\n",
+    "workflow = StateGraph(RagState)\n",
+    "workflow.add_node(\"retrieve\", retrieve)\n",
+    "workflow.add_node(\"generate\", generate)\n",
+    "\n",
+    "workflow.set_entry_point(\"retrieve\")\n",
+    "workflow.add_edge(\"retrieve\", \"generate\")\n",
+    "workflow.add_edge(\"generate\", END)\n",
+    "\n",
+    "app_rag = workflow.compile()\n",
+    "\n",
+    "# 4. Run Demo\n",
+    "print(\"---RUNNING LANGGRAPH RAG---\")\n",
+    "inputs = {\"question\": \"What is the CISO responsible for?\"}\n",
+    "result = app_rag.invoke(inputs)\n",
+    "print(\"\\nLangGraph Answer:\", result[\"answer\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "854c7284-227d-4558-8cdd-963fb804a646",
    "metadata": {},
    "source": [
@@ -1176,9 +1229,9 @@
     "   - `partially_supported`\n",
     "   - `unsupported`\n",
     "3. Map this verdict to a numeric `confidence`:\n",
-    "   - 1.0 → supported\n",
-    "   - 0.5 → partially_supported\n",
-    "   - 0.0 → unsupported\n",
+    "   - 1.0 \u2192 supported\n",
+    "   - 0.5 \u2192 partially_supported\n",
+    "   - 0.0 \u2192 unsupported\n",
     "\n",
     "The goal is to detect hallucinations and give the user a confidence score.\n"
    ]
@@ -1221,12 +1274,13 @@
     "    print(\"[Verify] Calling verifier model...\")\n",
     "    raw = chain.invoke({\"q\": question, \"a\": answer, \"c\": context}).content.strip().lower()\n",
     "    print(f\"[Verify] Raw model output: '{raw}'\")\n",
+    "    print(f\"[Verify] Raw model output: '{raw}'\")\n",
     "\n",
     "    # Normalize\n",
-    "    if \"supported\" == raw:\n",
+    "    if raw.startswith(\"supported\"):\n",
     "        verdict = \"supported\"\n",
     "        score = 1.0\n",
-    "    elif \"partially\" in raw:\n",
+    "    elif raw.startswith(\"partially\"):\n",
     "        verdict = \"partially_supported\"\n",
     "        score = 0.5\n",
     "    else:\n",
@@ -1237,7 +1291,8 @@
     "    print(\"[Verify] Confidence:\", score)\n",
     "    print(\"======================================\")\n",
     "\n",
-    "    return {\"verdict\": verdict, \"confidence\": score}\n"
+    "    return {\"verdict\": verdict, \"confidence\": score}\n",
+    "\n"
    ]
   },
   {
@@ -1329,8 +1384,8 @@
     "   - Is this requirement present in the document, based on the context?\n",
     "   - Answer \"yes\" or \"no\" and give a short justification.\n",
     "4. Interpret the answer:\n",
-    "   - If it starts with \"yes\" → `present = True`\n",
-    "   - Otherwise → `present = False`\n",
+    "   - If it starts with \"yes\" \u2192 `present = True`\n",
+    "   - Otherwise \u2192 `present = False`\n",
     "5. Return a list of results with:\n",
     "   - `requirement`\n",
     "   - `present` (bool)\n",
